--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+body {
+  background-color: #f8f8f8;
+background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='105' viewBox='0 0 80 105'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='death-star' fill='%23ffffff' fill-opacity='0.4'%3E%3Cpath d='M20 10a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm15 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zM20 75a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zm30-65a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V10zm0 65a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V75zM35 10a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zM5 45a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10zm60 35a5 5 0 0 1 10 0v50a5 5 0 0 1-10 0V45zm0-35a5 5 0 0 1 10 0v20a5 5 0 0 1-10 0V10z' /%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+.nav-tabs .nav-link.active {
+  background-color: rgb(0, 0, 0, 0.05);
+}
+
 .profile-card {
   margin-top: 30px;
 }
@@ -78,4 +87,14 @@
 .atributo {
   font-size: 1.3rem;
   padding: 0 0 0 30px;
+}
+
+#backstory-title {
+  text-align: end;
+  margin: 20px 10vw 0 0;
+}
+
+#backstory-content {
+  margin: 20px 5vw 0 30vw;
+  font-size: 1.1rem;
 }
